Fixed overflowing navbar into two lines.

--- a/www/css/additional.css
+++ b/www/css/additional.css
@@ -16,6 +16,20 @@
   padding-right: 15px;
 }
 
+@media (max-width: 991px) and (min-width: 768px) {
+  .navbar-nav > li > a {
+    padding: 8px;
+    margin-top: 7px;
+  }
+  .navbar-brand {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+  .navbar-brand img.headline {
+    display: none;
+  }
+}
+
 form.upload .well h4 {
   margin: 0;
 }
